Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/typevars/6199146/T6199146.out
T6199146.java:9:25: compiler.err.types.incompatible: T6199146.I2, T6199146.I1, (compiler.misc.incompatible.diff.ret: getFoo, )
1 error
